<resources>
    <string name="app_name">Daily Doubloons</string>
    <!--partner signup-->
    <string name="name">Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="Business_name">Business Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_Password">Forgot Password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="facebook_app_id">153137068740415</string>
    <string name="fb_login_protocol_scheme">153137068740415</string>
    <string name="doubloon_name">Doubloon Name</string>
    <string name="multi_post">Multi Post</string>
    <string name="sponsored">Sponsored</string>
    <string name="upload_spon_logo">Upload  Sponsored logo</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="partner_sign_up">HOST SIGN UP</string>
    <string name="player_sign_up">PLAYER SIGN UP</string>
    <string name="partner_login">HOST </string>
    <string name="player_login">PLAYER </string>
    <string name="create_doubloon">CREATE DOUBLOON </string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="faq_one">Aenean sollicitudin, lorem quis bibendum auctor?</string>
    <string name="faq_one_data">Lorem Ipsum Proin</string>
    <!--Navigation text-->
    <string name="my_home">Home</string>
    <string name="my_doubloons">My Doubloons</string>
    <string name="exclusive_doubloons">Exclusive Doubloons</string>
    <string name="sponsored_text">Sponsored</string>
    <string name="featured">Featured</string>
    <string name="progressive">Progressive</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="adverties_with_us">Advertise With Us</string>
    <string name="packages">Packages</string>
    <string name="about_doubloons">About Doubloons</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>


    <!--create multi doubloons-->
    <string name="main_doubloon">MAIN DOUBLOONS </string>
    <string name="sub_doubloon">Doubloons name </string>
    <string name="please_specify_first_daily_doubloons_sub_treasure">Please specify  daily doubloons sub treasure </string>
    <string name="expiry_Date">Expiry Date(yyyy-MM-dd)</string>
    <string name="description">Description</string>
    <string name="clues">Clue</string>
    <string name="location">LOCATION</string>
    <string name="flat_Number">House/Flat Number</string>
    <string name="locality">Locality</string>
    <string name="province">State/Province </string>
    <string name="prize_sub">Treasure : </string>
    <string name="prize">Treasure </string>
    <string name="number_of_people">Number of people will get this offer</string>
    <string name="post">POST DOUBLOON</string>
    <string name="copy_right">Copyright © 2017. Daily Doubloons. All Rights Reserved. Terms and Conditions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_logo">Upload Sponsored logo</string>
    <string name="max_hight">Image Size : Width "928" * Hight "160" </string>
    <!--profilr edit-->
    <string name="message">Message</string>

    <string name="interest">Interest </string>
    <string name="existing_password">Existing Password</string>
    <string name="new_password">New Password </string>
    <string name="address">Address</string>
    <string name="phone_no">Phone no</string>
    <string name="dob">Dob</string>
    <string name="forgot_password_two">Enter Your email below to receive  your password reset instruction</string>
    <!--ADVERTISE WITH US-->
    <string name="adverties_us">ADVERTISE WITH US </string>
    <string name="target_audience">Target Audience </string>
    <string name="suggested">Suggested Doubloons section </string>
    <string name="age">Age</string>
    <string name="url">Url</string>
    <string name="demo_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
        It was popularised in the 1960s with the release of Letraset sheets containing passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.It was popularised in the 1960s with the release of Letraset sheets containing passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </string>
    <string name="add_your_doubloons_to_this_event">Add your Doubloons\n to this event</string>

</resources>
