<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.media_mosaic.httpwww.doubloons.Fragments.Enquiry_fragment">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:layout_marginTop="?actionBarSize"
        android:scrollIndicators="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:gravity="center_horizontal"
            android:paddingRight="24dp"
            android:layout_marginBottom="50dp"
            android:paddingTop="56dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/logo" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/user_icon"
                android:theme="@style/MyEditTextTheme"
                android:textColorHint="@color/white"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/MyEditTextTheme"
                android:hint="@string/email"
                android:inputType="text"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/email_icon"
                android:textColorHint="@color/white"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/MyEditTextTheme"
                android:hint="@string/phone_no"
                android:textSize="16dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/phone_icon"
                android:textColorHint="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:textStyle="normal"
                android:layout_gravity="center"
                android:gravity="left"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/message_icon"
                android:textColor="@color/colorAccent"
                android:text="@string/message"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:theme="@style/MyEditTextTheme"
                android:hint="@string/message"

                android:maxLines="10"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:layout_gravity="start"
                android:gravity="start"
                android:background="@color/white"
                android:inputType="textMultiLine"
                android:paddingLeft="5dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorPrimary" />
            <Button
                android:id="@+id/continue_button"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:text="SUBMIT"
                android:backgroundTint="@color/log_in"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/text_code"
                android:editable="false"
                android:enabled="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="textMultiLine"
                android:textSize="@dimen/small_text"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="35dp"
                android:text="@string/copy_right"
                android:textColorHint="@color/white" />
        </LinearLayout>
    </ScrollView>


</FrameLayout>
